Add a contact form and update styles for improved accessibility

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
             <p>Today, while fewer lighthouses are actively used for navigation, they remain cultural and historical landmarks around the world. Many have been preserved as museums or tourist attractions, celebrating their rich history and architectural beauty. Some still serve as backup aids to navigation, particularly in remote areas where electronic systems may fail. The legacy of lighthouses continues to inspire maritime enthusiasts, engineers, and historians, reminding us of the ingenuity and perseverance of those who built and maintained these beacons of light for centuries.</p>
         </section>
     </main>
+    <div>
+    <form>
+        <input type="text" style="background-color: #333; color: #444; font-size: 8px; border: none;">
+        <br>
+        <input type="email" style="background-color: #333; color: #444; font-size: 8px; border: none;">
+        <br>
+        <textarea style="background-color: #333; color: #444; font-size: 8px; border: none;"></textarea>
+        <br>
+        <button style="background-color: #333; color: #444; font-size: 8px; border: none;">Submit</button>
+    </form>
+    </div>
     <footer>
         <p>&copy; 2023 Lighthouse Enthusiasts</p>
     </footer>
